# weekly-sales-report

./: .gitignore  DEPLOYMENT_CHECKLIST.md  MIGRATION_GUIDE.md  Makefile  README.md  SUPABASE_SETUP.md  VERCEL_SETUP.md  env.example  pyproject.toml  supabase_schema.sql  vercel.json
docs/: DIAGNOSIS_TOP_MARKETS_YOY.md
frontend/: .vercelignore  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  recharts.d.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/components/: BatchFileUpload.tsx  CategorySalesTable.tsx  DiscountsCustomerTable.tsx  DiscountsProductTable.tsx  FileMetadata.tsx  FileUpload.tsx  GenerateButton.tsx  LayoutContent.tsx  LoadingProgress.tsx  MetricsPreview.tsx  MetricsPreviewMTD.tsx  PeriodSelector.tsx  ProductsGenderTable.tsx  ProductsNewTable.tsx  ProductsSummaryMonthPreview.tsx  ProductsSummaryPreview.tsx  SidebarLayout.tsx  TopMarketsNetRevenueTable.tsx  TopMarketsTable.tsx  WeekSelector.tsx
frontend/contexts/: ChartSettingsContext.tsx  DataCacheContext.tsx
frontend/lib/: api.ts  audienceBudgetSeries.ts  periods.ts  recharts.ts  (+2 more)
open-in-v0/: package.json
presentations/: CDLP_Sales_Report_W13_2026_outline.md  CDLP_Sales_Report_outline_generated.pptx
scripts/: build_slides_markdown.py  generate_weekly_report_pptx_outline.py  run_budget_debug.py  start-frontend.sh  start_dev.sh
templates/: pdf_layout.yaml
tests/: test_customer_quality.py  test_markets_yoy.py  test_monthly_veronika_kpis.py  test_schemas.py  test_transforms.py  test_viz_export.py
weekly_report/: __init__.py
(+139 files in other folders)
